--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: python
 python: "3.6"
 cache: pip
 before_cache: rm -f $HOME/.cache/pip/log/debug.log
-install: pip install pytest-cldf
+install: pip install pytest-cldf>=0.2.1
 script: pytest --cldf-metadata=cldf/StructureDataset-metadata.json test.py
